--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="template-header">
         <div class="logo">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/James_Allen_Logo.svg/1280px-James_Allen_Logo.svg.png">
+          <img src="https://tushbaby.com/cdn/shop/files/tushbaby-logo_200x.svg?v=1728508719">
         </div>
       </div>
     </header>
@@ -31,7 +31,7 @@
 
     <!-- scripts -->
     
-    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/RLOoEg0xO4AvRBF4lqaFJ6yuGCrO106z5mA8fsv9?languageCode=en" async></script>    
+    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/imsJ8WEba9hY1Wd6vyIEaTwC9rAKkqQYftkCEAXA?languageCode=en" async></script>    
     <!-- end of scripts -->
   </body>
 </html>
